# IRViewer

./: CMakeLists.txt  README.md
src/: irparser.cpp  irparser.h  irviewer.cpp  irviewer.h  irviewer.ui  main.cpp
